코드값 추가, HttpExchange proxy설정 방법 변경, 침수차 조회 api